--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.3",
     "@mui/styled-engine-sc": "^5.10.1",
+    "@syncfusion/ej2-react-grids": "^20.3.48",
+    "@syncfusion/ej2-react-inputs": "^20.3.47",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
+    "devextreme": "22.1.5",
+    "devextreme-react": "22.1.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
