--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-html5video": "^2.5.1",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
