--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devextreme": "22.1.5",
     "devextreme-react": "22.1.5",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.14.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
